démarre l'affichage des intervenants

--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -27,7 +27,8 @@ layout: base
   </header>
 
   <div class="event-content e-content" itemprop="articleBody">
-    {{ page.personne_animatrice }} <br>
+    {{ page.image_animatrice }} <br>
+    {{ page.animatrice }} <br>
     {{ page.date_debut }} <br>
     {{ page.date_fin }} <br>
     {{ page.titre }} <br>
