affiche les évènements passés

--- a/_includes/event.html
+++ b/_includes/event.html
@@ -1,5 +1,5 @@
 {% assign event = include.event %}
-<article class="event">
+<article class="stage">
     <h3>
       <a class="stage-link" href="{{ event.url | relative_url }}">
         {{ event.titre | escape }}
