--- a/_includes/event.html
+++ b/_includes/event.html
@@ -1,16 +1,21 @@
 {% assign event = include.event %}
 <article class="stage">
-    <h3>
-      <a class="stage-link" href="{{ event.url | relative_url }}">
-        {{ event.titre | escape }}
-      </a>
-    </h3>
-    <span class="stage-meta text-sm">du {{ event.date_debut | date: date_format }} au {{ event.date_fin | date: date_format }}</span>
-    <span class="stage-meta text-sm">{{event.categorie}}</span>
+    <header>
+      <h3>
+        <a class="stage-link" href="{{ event.url | relative_url }}">
+          {{ event.titre | escape }}
+        </a>
+      </h3>
+      <time class="stage-meta text-sm">du {{ event.date_debut | date: date_format }} au {{ event.date_fin | date: date_format }}</time>
+      <span class="stage-meta text-sm">{{event.categorie}}</span>
+    </header>
+    <body>
     <hr class="hr-half">
     {{ event.excerpt }}
+    <a href="{{ event.url | relative_url }}" class="stage-link">voir le détail</a>
     <hr class="hr-half">
-    <section class="stage-animatrice text-sm">
+    </body>
+    <footer class="stage-animatrice text-sm">
       <figure class="stage-animatrice-pic" role="group">
         <img src="{{ "assets/animatrices/" | append: event.image_animatrice | relative_url }}" alt="{{ event.nom_animatrice }}">
         <figcaption class="sr-only">{{ event.nom_animatrice }}</figcaption>
@@ -19,9 +24,7 @@
         <span class="text-xs">Animé par</span>
         <em>{{ event.nom_animatrice }}</em>
       </h3>
-      <p class="stage-animatrice-bio">
-        {{ event.bio_animatrice }}
-      </p>
-    </section>
+      <p class="stage-animatrice-bio">{{ event.bio_animatrice }}</p>
+    </footer>
   </article>
   <hr>
