ajoute des evenements

--- a/_includes/event.html
+++ b/_includes/event.html
@@ -12,7 +12,7 @@
     <body>
     <hr class="hr-half">
     {{ event.excerpt }}
-    <a href="{{ event.url | relative_url }}" class="stage-link">voir le détail</a>
+    <a href="{{ event.url | relative_url }}" class="stage-link"><em>voir le détail</em></a>
     <hr class="hr-half">
     </body>
     <footer class="stage-animatrice text-sm">
