--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -4,36 +4,6 @@ layout: base
 
 <style>
 
-  .booking {
-    display: block;
-    width: 5em;
-    outline: 0;
-    cursor: pointer;
-    margin: auto;
-    padding: 5px 1em;
-    font-size: 1em;
-    font-weight: 500;
-    vertical-align: middle;
-    border: 1px solid;
-    border-radius: 6px;
-    color: #ffffff;
-    background-color: #2ea44f;
-    border-color: #1b1f2326;
-    box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
-    transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
-    transition-property: color, background-color, border-color;
-  }
-  .booking:visited {
-    color: #ffffff;
-    background-color: #2ea44f;
-    text-decoration: none;
-  }
-  .booking:hover {
-    background-color: #2c974b;
-    border-color: #1b1f2326;
-    transition-duration: 0.1s;
-    text-decoration: none;
-  }
   .event-title {
     font-size: 4em;
     text-align: center;
@@ -51,6 +21,31 @@ layout: base
   }
   .stage-animatrice-bio {
     color: #555;
+  }
+  .event-footer {
+    text-align: center;
+  }
+  .booking {
+    width: 5em;
+    margin: auto;
+    padding: .5em 1em;
+    font-size: 1em;
+    font-weight: 500;
+    border: 1px solid;
+    border-radius: 6px;
+    color: #ffffff;
+    background-color: #2ea44f;
+    border-color: #1b1f2326;
+    box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
+    transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+    transition-property: color, background-color, border-color;
+  }
+  .booking:visited {
+    color: #ffffff;
+  }
+  .booking:hover {
+    background-color: #0f7406;
+    text-decoration: none;
   }
 
 </style>
@@ -87,7 +82,7 @@ layout: base
     {{ page.content }}
   </body>
 
-  <footer>
+  <footer class="event-footer">
     <a class="booking" href="{{ page.booking }}" target="_blank">Réserver</a>
   </footer>
 </article>
